feat: atualizando casemodel e casecontroller
